--- a/Burgir-web/media.css
+++ b/Burgir-web/media.css
@@ -34,11 +34,10 @@
             font-size: 15px;
         }
 
-        .main-content1
+        #main-content1
         {
             display: flex;
             flex-direction: column;
-            flex-wrap: wrap;
         }
 
         #page2p1
