--- a/Dr.Reddy/Reddy.css
+++ b/Dr.Reddy/Reddy.css
@@ -9,31 +9,34 @@
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    /* border: 2px solid black; */
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(144, 144, 144);
     align-items: center;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .menu1
 {
     display: flex;  
     align-items: center;
-    font-size: 20px;
+    font-size: 14px;
     text-transform: uppercase;
+}
+
+td
+{
+    padding: 10px;
+    /* text-align: left; */
+    text-align: left;
 }
 
 .menu
 {
     display: flex;  
     list-style-type: none;
-    font-size: 20px;
     text-transform: uppercase;
 }
-
-.icon1
-{
-    padding-left: 100px;
-}
+    
 a{
     padding: 20px;
     text-decoration: none;
@@ -43,48 +46,75 @@ a:active
 {
     color: red;
 }
-.icon2
+
+.maindrop
 {
-    color: #5225b5;
+    display: flex;
+    width: 100%;
 }
-#icon3
+
+#home1
+{
+    font-weight: bold;
+}
+
+.dropdown
+{
+    position: relative;
+    text-transform: capitalize;
+}
+
+#home1
+{
+    font-weight: bold;
+}
+
+.dropdown > a
+{
+    font-size: 16px;
+}
+
+.dropdown-option
+{
+    display: none;
+    position: absolute;
+    background-color: white;
+    padding: 20px;
+    list-style-type: none
+}
+
+.dropdown li
 {
     padding: 10px;
 }
-.menu2
-{
-    display: flex;  
-    list-style-type: none;
-    font-size: 20px;
-    text-transform: capitalize;
-    font-weight: 400;
-}
-.class1
-{
-    display: none;
-}
 
-.menu3:hover .class1 
-{
-    display: flex;
-    text-transform: capitalize;
-}
-
-.menu3:hover .class1 a
+.dropdown:hover .dropdown-option
 {
     display: block;
-    background-color: white;
-}
-.class1 a:hover
-{
-    text-decoration: underline black;
+    /* text-align: left; */
+    text-transform: capitalize;
+    list-style-type: none; 
 }
 
-.positon
+.dropdown:hover > a
 {
-    width: 100%;
-    /* position: fixed; */
-    background-color: white;
+    text-decoration: underline  red;
+}
+
+.icon2 img
+{
+    padding-left: 10px;
+    color: #5225b5;
+ }
+
+.page1place
+{
+    width: 80%;
+    /* border: 5px solid black; */
+    margin: 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(144, 144, 144);
+
 }
 
 .page1
