--- a/Dr.Reddy/Reddy.css
+++ b/Dr.Reddy/Reddy.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Drlcircular,sans-serif;
     color: rgb(144, 144, 144);
     align-items: center;
     margin-bottom: 20px;
@@ -21,13 +21,6 @@
     align-items: center;
     font-size: 14px;
     text-transform: uppercase;
-}
-
-td
-{
-    padding: 10px;
-    /* text-align: left; */
-    text-align: left;
 }
 
 .menu
@@ -50,7 +43,8 @@ a:active
 .maindrop
 {
     display: flex;
-    width: 100%;
+    /* border: 1px solid red; */
+    /* width: 100%; */
 }
 
 #home1
@@ -99,6 +93,11 @@ a:active
 .dropdown:hover > a
 {
     text-decoration: underline  red;
+}
+
+.dropdown-option a:hover 
+{
+    text-decoration: underline;
 }
 
 .icon2 img
@@ -505,21 +504,119 @@ h2
  padding-top: 20px;
 }
 
+#header7
+{
+    width: 100%;
+    background-color: rgb(237, 237, 237);
+}
+
 .page7container
 {
     width: 80%;
     margin: 0 auto;
 }
 
-#page7p1
+.page7text h2
 {
+    font-family:Drlcircular sans-serif;
+    font-weight: lighter;
     font-size: 40px;
+    padding-top: 100px;
     padding-bottom: 5px;
     border-bottom:1px solid red ;
 }
 
-#page7img1
+.page7img img
 {
-    width: 347px;
+    width: 348px;
     height: 280px;
+    /* border: 1px solid black; */
+}
+.page7cards
+{
+    display: flex;
+    /* border: 1px solid black; */
+}
+
+.page7card
+{
+    padding-top: 30px;
+    /* padding-bottom: 50px; */
+    border: 2px solid black;
+}
+
+.page7text
+{
+    padding-top: 20px;
+    font-size: 18px;
+    font-family: Drlcircular,sans-serif;
+    font-weight: 700;
+    padding-bottom: 50px;
+}
+
+#progress1
+{
+    position: relative;
+    width: 100%;
+    height: 5px;
+    margin-top: 20px;
+    background-color: #a8a8a8;
+}
+
+progress::-webkit-progress-value { 
+    background: red; 
+} 
+
+.progress-container
+{
+    padding: 100px 0px;
+}
+
+.page8container
+{
+    padding-top: 100px;
+    width: 80%;
+    margin: 0 auto;
+    text-transform: capitalize;
+}
+
+.page8p1
+{
+    padding-top: 100px;
+}
+
+.page8p1 h2
+{
+    padding-bottom: 5px;
+    border-bottom: 1px solid red;
+}
+
+.page8container2 
+{
+    padding-top: 20px;
+    display: flex;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: sans-serif;
+    padding-bottom: 100px;
+}
+
+.page8text
+{
+    padding: 20px;
+    border-right:1px solid red ;
+}
+
+#page8text1
+{
+    padding-top: 10px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid red;
+}
+
+#page8text2
+{
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid red;
 }
