--- a/Burgir-web/Burger.css
+++ b/Burgir-web/Burger.css
@@ -6,8 +6,6 @@
         }
         #header1
         {
-            /* width: 100%; */
-            /* height: 825px; */
             background-color: #ffc045;
             overflow: hidden;
         }
@@ -72,11 +70,11 @@
         color: black;
         padding-right: 30px;
         font-size: 15px;
-        letter-spacing: 2px;
+        font-family: sans-serif;
         text-transform: uppercase;
         color: #3d2514;
         font-weight: 700;
-        font-family: "Bebas Neue";
+        /* font-family: "Bebas Neue"; */
        }
 
        a:active
@@ -663,7 +661,7 @@ padding-left: 10px;
 {
 padding: 30px 100px 100px 0px;
 font-size: 17px;
-line-height: 25px;
+/* line-height: 25px; */
 color: #ffffff;
 font-weight: 400;
 font-family: "Montserrat";
