--- a/Dr.Reddy/Reddy.css
+++ b/Dr.Reddy/Reddy.css
@@ -468,6 +468,9 @@ h2
 {
     width: 100%;
     height: 100%;
+    transition-duration: 2s;
+    transition-delay: 0.1s;
+    transition-timing-function: ease-in-out;
 }
 
 .page5img img:hover
@@ -634,6 +637,7 @@ h2
 {
     width: 100%;
     height: 100%;
+    transition: 2s ease-in-out 0.1s ;
 }
 
 .page7img img:hover
