--- a/Dr.Reddy/Reddy.css
+++ b/Dr.Reddy/Reddy.css
@@ -9,10 +9,11 @@
     display: flex;
     justify-content: space-around;
     padding: 20px;
-    font-family: Drlcircular,sans-serif;
+    font-family: sans-serif;
     color: rgb(144, 144, 144);
     align-items: center;
     margin-bottom: 20px;
+    width: 100%;
 }
 
 .country-option
@@ -20,6 +21,10 @@
     display: none;
 }
 
+#bars
+{
+    display: none;
+}
 
 .icon2:hover .country-option
 {
@@ -74,6 +79,11 @@ a:active
 #home1
 {
     font-weight: bold;
+}
+
+#check2
+{
+    display: none;
 }
 
 .dropdown
@@ -141,29 +151,18 @@ a:active
     color: #5225b5;
  }
 
-.page1place
-{
-    width: 100%;
-    position: fixed;
-    top: 0;
-    margin: 0 auto;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
-    color: rgb(144, 144, 144);
-
-}
-
 .page1
 {
-    padding-top: 100px;
     padding-bottom: 100px;
+    width: 100%;
+    height: 640px;
 }
 
 .images
 {
     margin-top: 50px;
     width: 100%;
-    height: 639px;
+    height: 100%;
     background: url(./image/1.png) no-repeat center center/cover;
     animation: rotation 24s ease-in 3s infinite;
 }
@@ -224,7 +223,6 @@ a:active
     /* font-weight: 300; */
     padding-top: 100px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    line-height: 30px;
 }
 
 .page2content p
@@ -274,7 +272,6 @@ a:active
 
 .page3content1
 {
-    width: 1120px;
     padding: 100px 100px 0px;
     font-size: 20px;
     color: white;
@@ -424,7 +421,6 @@ h2
     padding-top: 30px;
     display: flex;
     justify-content: space-evenly;   
-    overflow: hidden;
 }
 
 .page5cards .card2
@@ -563,11 +559,11 @@ h2
  padding-top: 20px;
 }
 
-.right #rightarrow
+ #rightarrow
 {
   position: absolute; 
   top: 217px;
-  left: 560px;
+  right: 0;
   font-size: 30px;
   color: #5225b5;
 }
@@ -717,6 +713,7 @@ progress::-webkit-progress-value {
 {
     padding: 20px;
     border-right:1px solid red ;
+    background-attachment: scroll;
 }
 
 #page8text1
