--- a/Dr.Reddy/Reddy.css
+++ b/Dr.Reddy/Reddy.css
@@ -62,6 +62,8 @@ a{
     padding: 20px;
     text-decoration: none;
     color: black;
+    font-family: sans-serif;
+    font-weight: 500;
 }
 a:active
 {
@@ -709,11 +711,43 @@ progress::-webkit-progress-value {
     padding-bottom: 100px;
 }
 
+.page8img
+{
+    background: url(./image/main-image.png) no-repeat center/cover;
+    width: 60%;
+}
+
+.page8img img
+{
+    width: 100%;
+    height: 100%;
+}
+
+.page8text3
+{
+    padding: 100px 0px 0px 0px;
+}
+
+.page8text3 p
+{
+    padding: 100px 100px 50px 0px;
+    font-size: 40px;
+    font-weight: 300;
+    background-color: white;
+}
+
+
+.page8textwrapper
+{
+    padding: 100px 150px 0px 0px;
+}
+
+
 .page8text
 {
     padding: 20px;
     border-right:1px solid red ;
-    background-attachment: scroll;
+    width: 40%;
 }
 
 #page8text1
