--- a/BCCI/style.css
+++ b/BCCI/style.css
@@ -4,6 +4,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.position-related
+{
+    position: fixed;
+    width: 100%;
+    z-index: 5;
+}
+
 .images
 {
     width: 40px;
@@ -146,6 +154,7 @@
     font-weight: 400;
     list-style-type: none;
     align-items: center;
+    background-color: white;
 }
 
 .navbar2 a
