--- a/BCCI/style.css
+++ b/BCCI/style.css
@@ -1410,3 +1410,14 @@ position: absolute;
 top: 120px;
 left: 155px;
 }
+
+.listsofservices a
+{
+    text-decoration: none;
+    color: white;
+}
+
+.listsofservices a:hover
+{
+    color: red;
+}
