--- a/BCCI/responsive.css
+++ b/BCCI/responsive.css
@@ -2,30 +2,16 @@
 /* // No media query for `xs` since this is the default in Bootstrap */
 
 /* // Small devices (landscape phones, 576px and up) */
-@media (max-width: 576px) { 
-    /* .navwrapper1
-    {
-        flex-wrap: wrap;
-       
-    } */
- }
+@media (min-width: 576px) {  }
 
 /* // Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {  }
 
 /* // Large devices (desktops, 992px and up) */
-@media (max-width: 992px) {  }
+@media (min-width: 992px) {  }
 
 /* // X-Large devices (large desktops, 1200px and up) */
-@media (max-width: 1200px) {
-    .navwrapper1
-    {
-        flex-wrap: wrap;
-        z-index: 9999;
-    }
- }
+@media (min-width: 1200px) {  }
 
 /* // XX-Large devices (larger desktops, 1400px and up) */
-@media (max-width: 1400px)
- { 
- }
+@media (min-width: 1400px) {  }
