--- a/Netflix/Netflix.css
+++ b/Netflix/Netflix.css
@@ -11,6 +11,7 @@
             background: url(./Image/netflix-background.jpg)no-repeat center/cover;
             border-bottom: 10px solid rgb(35 35 35);
             padding-bottom: 80px;
+            width: 100%;
         }
         .images
         {
@@ -145,10 +146,11 @@
         /* padding-top: 20px; */
         padding: 100px 0px;
       }
-      .page2-images
-      {
-        width: 50%;
-      }
+     
+      .page2-images img
+        {
+          width: 100%;
+        }
       
       .text h2
       {
@@ -208,7 +210,7 @@
       }
       /* .page3-images img
       {
-        width: 100%;
+        width: 50%;
       } */
       .page4,.page5
       {
@@ -235,6 +237,11 @@
         font-weight: 400; 
        }
 
+       .text4 
+       {
+        width: 50%;
+       }
+
       .page4wrapper,.page5wrapper
       {
         display: flex;
@@ -245,6 +252,7 @@
       {
         flex-direction: row-reverse;
         column-gap: 20px;
+        width: 100%;
       }
       .page5 h2
       {
@@ -380,7 +388,6 @@
       {
         padding-bottom: 20px;
         font-size: 17px;
-        
         padding-left: 60px;
       }
 
