--- a/Netflix/Responsive.css
+++ b/Netflix/Responsive.css
@@ -1,6 +1,33 @@
 /* // XX-Large devices (larger desktops, 1400px and up) */
 @media (max-width: 1400px) 
   { 
+
+    
+    .magic
+    {
+      display: flex;
+      align-items: center;
+      border: 2px solid rgb(53 53 53);
+      border-radius: 5px;
+      position: absolute;
+      top: 258px;
+      left: 103px;
+      background-color: black;
+      padding: 0px 20px;
+    }
+
+    .magic img
+    {
+      object-fit: cover;
+      margin: 5px 0px;
+    }
+
+    .magic p
+    {
+      font-size: 15px;
+      padding: 2px 15px 2px 15px;
+    }
+
     #select2 {
       background: transparent;
       padding: 15px 20px;
@@ -201,6 +228,32 @@
 /* // X-Large devices (large desktops, 1200px and up) */
 @media (max-width: 1200px)
  { 
+
+  .magic
+    {
+      display: flex;
+      align-items: center;
+      border: 2px solid rgb(53 53 53);
+      border-radius: 5px;
+      position: absolute;
+      top: 230px;
+      left: 73px;
+      background-color: black;
+      padding: 0px 10px;
+    }
+
+    .magic img
+    {
+      object-fit: cover;
+      margin: 5px 0px;
+    }
+
+    .magic p
+    {
+      font-size: 15px;
+      padding: 2px 15px 2px 15px;
+    }
+
   #select2 {
     background: transparent;
     padding: 15px 20px;
@@ -402,6 +455,31 @@
 /* // Large devices (desktops, 992px and up) */
 @media (max-width: 992px)
 {
+
+  .magic
+  {
+    display: flex;
+    align-items: center;
+    border: 2px solid rgb(53 53 53);
+    border-radius: 5px;
+    position: absolute;
+    top: 195px;
+    left: 50px;
+    background-color: black;
+    padding: 0px 5px;
+  }
+
+  .magic img
+  {
+    object-fit: cover;
+    margin: 5px 0px;
+  }
+
+  .magic p
+  {
+    font-size: 15px;
+    padding: 2px 15px 2px 15px;
+  }
 
  #select2 {
    background: transparent;
@@ -606,6 +684,37 @@
  
 {
 
+  .magic
+  {
+    display: flex;
+    align-items: center;
+    border: 2px solid rgb(53 53 53);
+    border-radius: 5px;
+    position: absolute;
+    top: 155px;
+    left: 35px;
+    background-color: black;
+    padding: 0px 5px;
+  }
+
+  .magic img
+  {
+    object-fit: cover;
+    margin: 5px 0px;
+  }
+
+  #img1
+  {
+    height: 70px;
+    object-fit: cover;
+  }
+
+  .magic p
+  {
+    font-size: 12px;
+    padding: 2px 5px 2px 5px;
+  }
+
   #button3 {
     border-radius: 5px;
     padding: 5px 20px;
@@ -799,6 +908,44 @@
 /* // Small devices (landscape phones, 576px and up) */
 @media (max-width: 576px)
     {
+
+      .magic
+  {
+    display: flex;
+    align-items: center;
+    border: 2px solid rgb(53 53 53);
+    border-radius: 5px;
+    position: absolute;
+    top: 117px;
+    left: 20px;
+    background-color: black;
+    padding: 0px 0px;
+  }
+
+  .magic img
+  {
+    object-fit: cover;
+    margin: 5px 0px;
+  }
+
+  #img1
+  {
+    width: 50px;
+    object-fit: cover;
+  }
+
+  #img2
+  {
+    width: 40px;
+    object-fit: cover;
+  }
+
+  .magic p
+  {
+    font-size: 10px;
+    padding: 2px 2px 2px 2px;
+  }
+
       #button3
       {
         border-radius: 5px;
