--- a/Netflix/Netflix.css
+++ b/Netflix/Netflix.css
@@ -17,11 +17,14 @@
         {
           position: relative;
           padding: 5px 10px;
+          font-size: 15px;
         }
 
         .bg-mini-wrapper button
         {
           width: 100%;
+          padding: 5px 5px;
+          font-size: 15px;
         }
 
         .bg-wrapper:hover #white-theme+.bg-mini-wrapper
