--- a/BCCI/style.css
+++ b/BCCI/style.css
@@ -7,9 +7,9 @@
 
 .position-related
 {
-    position: fixed;
-    width: 100%;
-    z-index: 5;
+    /* position: fixed;
+    width: max-content;
+    z-index: 5; */
 }
 
 .images
@@ -210,6 +210,7 @@ text-transform: capitalize;
 .hoverablemenu
 {
 display: flex;
+list-style: none;
 }
 
 .hoverablemenu a:hover
@@ -357,6 +358,7 @@ margin-left: 20px;
 padding: 10px;
 border: 1px solid black;
 border-radius: 50%;
+align-items: center;
 }
 
 .icons3
@@ -494,7 +496,7 @@ border-bottom-right-radius: 10px;
 z-index: 2;
 background-position: top center;
 background-repeat: no-repeat;
-background-size: 100% 415px;
+background-size: 100% 480px;
 }
 
 .menu-list
@@ -585,8 +587,8 @@ margin: 0 auto;
 font-family: sans-serif;
 padding: 0px 0px 50px 0px;
 display: flex;
-justify-content: space-between;
 column-gap: 20px;
+overflow: scroll;
 }
 
 .vidcardimg1 
@@ -691,6 +693,7 @@ width: 70%;
 width: 100%;
 height: 100%;
 border-radius: 10px;
+object-fit: cover;
 }
 
 .page3content
@@ -924,9 +927,10 @@ font-size: 14px;
 {
 width: 100%;
 height: 100%;
-position: relative;
+position: absolute;
 z-index: 2;
 }
+
 
 .flexcard2img 
 {
@@ -934,6 +938,7 @@ width: 150px;
 height: 164px;
 margin-left: 100px;
 margin-top: 100px;
+position: relative;
 }
 
 .flexcard2num p
@@ -948,7 +953,7 @@ left: -30px;
 .page5content h2
 {
 color: #000;
-font-size: 34px;
+font-size: 41px;
 font-weight: 700;
 }
 
@@ -956,6 +961,7 @@ font-weight: 700;
 {
 opacity: 0.5;
 padding: 20px 0px;
+font-size: 20px;
 }
 
 .page5content
@@ -1001,7 +1007,7 @@ padding-right: 100px;
 color: #2b3f6c;
 font-size: 18px;
 font-weight: 500;
-margin-left: 120px;
+margin-left: 10px;
 margin-top: 30px;
 padding-right: 100px;
 }
@@ -1079,7 +1085,7 @@ left: 50px;
 .trophies-card
 {
 display: flex;
-justify-content: space-around;
+justify-content: space-between;
 }
 
 .page8wrapper
