--- a/PortFolio/portfolio.css
+++ b/PortFolio/portfolio.css
@@ -28,7 +28,8 @@ a{
     position: fixed;
     top: 0;
     left: 0;
-    /* background-attachment: fixed; */
+    z-index: 2;
+    padding-bottom: 100px;
 }
     #img1
     {
@@ -103,6 +104,7 @@ a{
 .images2 
 {
     padding-bottom: 50px;
+    width: 100%;
 }
 
 #about h2
